:package: refactor(server): Express server as a class

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
 		"baseUrl": ".",
 		"declaration": true,
 		"outDir": "./build",
+		"resolveJsonModule": true,
 		"paths": {
 			"@/*": [
 				"src/*",
