--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"test": "jest",
 		"test:debug": "node --inspect node_modules/.bin/jest --runInBand"
 	},
+	"main": "index.js",
 	"private": true,
 	"author": "caiquearaujo",
 	"license": "MIT",
@@ -40,11 +41,14 @@
 		"express": "^4.18.1",
 		"helmet": "^5.1.0",
 		"http-errors": "^2.0.0",
+		"module-alias": "^2.2.2",
 		"morgan": "^1.10.0"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.13",
+		"@types/http-errors": "^1.8.2",
 		"@types/jest": "^28.1.1",
+		"@types/morgan": "^1.9.3",
 		"@types/node": "^17.0.43",
 		"@typescript-eslint/eslint-plugin": "^5.28.0",
 		"@typescript-eslint/parser": "^5.28.0",
@@ -58,5 +62,8 @@
 		"prettier": "^2.7.0",
 		"ts-jest": "^28.0.5",
 		"typescript": "^4.7.3"
+	},
+	"_moduleAliases": {
+		"@": "build/"
 	}
 }
