--- a/package.json
+++ b/package.json
@@ -36,9 +36,15 @@
 		"url": "https://github.com/caiquearaujo/ts-graphql-api-server-sample/issues"
 	},
 	"dependencies": {
+		"@graphql-tools/schema": "^8.3.14",
+		"apollo-server-express": "^3.8.2",
 		"debug": "^4.3.4",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
+		"express-rate-limit": "^6.4.0",
+		"graphql": "^16.5.0",
+		"graphql-depth-limit": "^1.1.0",
+		"graphql-query-complexity": "^0.11.0",
 		"helmet": "^5.1.0",
 		"http-errors": "^2.0.0",
 		"module-alias": "^2.2.2",
@@ -46,6 +52,8 @@
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.13",
+		"@types/express-rate-limit": "^6.0.0",
+		"@types/graphql-depth-limit": "^1.1.3",
 		"@types/http-errors": "^1.8.2",
 		"@types/jest": "^28.1.1",
 		"@types/morgan": "^1.9.3",
