--- a/package.json
+++ b/package.json
@@ -58,8 +58,10 @@
 		"@types/jest": "^28.1.1",
 		"@types/morgan": "^1.9.3",
 		"@types/node": "^17.0.43",
+		"@types/supertest": "^2.0.12",
 		"@typescript-eslint/eslint-plugin": "^5.28.0",
 		"@typescript-eslint/parser": "^5.28.0",
+		"@zerollup/ts-transform-paths": "^1.7.18",
 		"concurrently": "^7.2.2",
 		"eslint": "^8.17.0",
 		"eslint-config-airbnb-base": "^15.0.0",
@@ -68,6 +70,7 @@
 		"jest": "^28.1.1",
 		"nodemon": "^2.0.16",
 		"prettier": "^2.7.0",
+		"supertest": "^6.2.3",
 		"ts-jest": "^28.0.5",
 		"typescript": "^4.7.3"
 	},
