--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
 		"helmet": "^5.1.0",
 		"http-errors": "^2.0.0",
 		"module-alias": "^2.2.2",
-		"morgan": "^1.10.0"
+		"morgan": "^1.10.0",
+		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.13",
@@ -59,6 +60,7 @@
 		"@types/morgan": "^1.9.3",
 		"@types/node": "^17.0.43",
 		"@types/supertest": "^2.0.12",
+		"@types/uuid": "^8.3.4",
 		"@typescript-eslint/eslint-plugin": "^5.28.0",
 		"@typescript-eslint/parser": "^5.28.0",
 		"@zerollup/ts-transform-paths": "^1.7.18",
