:bug: fix(server): Correction when building server

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -15,7 +15,7 @@
 		"allowJs": false,
 		"resolveJsonModule": true,
 		"baseUrl": ".",
-		"rootDir": ".",
+		"rootDir": "./src",
 		"outDir": "./build",
 		"paths": {
 			"@/*": [
