--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
 		"ts:check-watch": "npm run ts:check -- --watch",
 		"ts:build": "tsc -p tsconfig.build.json --emitDeclarationOnly",
 		"ts:watch": "tsc -p tsconfig.build.json --watch",
-		"js:watch": "nodemon -q build/index.js",
-		"dev": "concurrently \"npm:ts:watch\" \"npm:js:watch\"",
+		"js:watch": "nodemon --watch build build/index.js",
+		"dev": "rimraf .build && concurrently \"npm:ts:watch\" \"npm:js:watch\"",
 		"lint": "eslint --ext .ts,.js --ignore-path .gitignore --fix src",
 		"format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
 		"prepare": "npm run ts:build",
@@ -24,7 +24,6 @@
 		"test": "cross-env NODE_ENV=test jest",
 		"test:debug": "cross-env NODE_ENV=test node --inspect ./node_modules/.bin/jest --runInBand"
 	},
-	"main": "index.js",
 	"private": true,
 	"author": "caiquearaujo",
 	"license": "MIT",
@@ -49,6 +48,7 @@
 		"http-errors": "^2.0.0",
 		"module-alias": "^2.2.2",
 		"morgan": "^1.10.0",
+		"nocache": "^3.0.4",
 		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
@@ -73,6 +73,7 @@
 		"jest": "^28.1.1",
 		"nodemon": "^2.0.16",
 		"prettier": "^2.7.0",
+		"rimraf": "^3.0.2",
 		"supertest": "^6.2.3",
 		"ts-jest": "^28.0.5",
 		"typescript": "^4.7.3"
